--- a/style.css
+++ b/style.css
@@ -1,79 +1,16 @@
 body {
     position: relative;
 }
-#the-pointer-to-show {
-    display: none;
-    font-size: 16em ;
+.full-div {
     position: absolute;
-    top:0px;
-    right:10px;
-}
-.dg {
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
     display: none;
 }
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+
+.full-div video {
+    height: 100%;
     width: 100%;
-    color: black;
-}
-
-.footer-text {
-    max-width: 600px;
-    text-align: center;
-    margin: auto;
-}
-
-@media only screen and (max-width: 600px) {
-
-    .footer-text,
-    .dg {
-        display: none;
-    }
-}
-
-/*
- *  The following loading spinner CSS is from SpinKit project
- *  https://github.com/tobiasahlin/SpinKit
- */
-.sk-spinner-pulse {
-    width: 20px;
-    height: 20px;
-    margin: auto 10px;
-    float: left;
-    background-color: #333;
-    border-radius: 100%;
-    -webkit-animation: sk-pulseScaleOut 1s infinite ease-in-out;
-    animation: sk-pulseScaleOut 1s infinite ease-in-out;
-}
-
-@-webkit-keyframes sk-pulseScaleOut {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-
-    100% {
-        -webkit-transform: scale(1.0);
-        transform: scale(1.0);
-        opacity: 0;
-    }
-}
-
-@keyframes sk-pulseScaleOut {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-
-    100% {
-        -webkit-transform: scale(1.0);
-        transform: scale(1.0);
-        opacity: 0;
-    }
-}
-
-.spinner-text {
-    float: left;
 }
